[gd_scene load_steps=2 format=3 uid="uid://d3rfaahlt6cls"]

[ext_resource type="Script" path="res://editors/pf/eV3.gd" id="1_1dr5n"]

[node name="String" type="VBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource("1_1dr5n")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_type_variation = &"Subtitle"
text = "Name"

[node name="Label2" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_type_variation = &"Subtitle"
theme_override_colors/font_color = Color(0.963534, 0, 0.360486, 1)
text = "f"

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
theme_type_variation = &"buttonBacking"

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
tooltip_text = "Make Uniform"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_type_variation = &"buttonBacking"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="LineEdit" type="SpinBox" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(66, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = -100.0
step = -0.01
allow_greater = true
allow_lesser = true

[node name="LineEdit2" type="SpinBox" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(66, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = -100.0
step = -0.01
allow_greater = true
allow_lesser = true

[node name="LineEdit3" type="SpinBox" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(66, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = -100.0
step = -0.01
allow_greater = true
allow_lesser = true

[connection signal="toggled" from="HBoxContainer/PanelContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/LineEdit" to="." method="_on_line_edit_value_changed"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/LineEdit2" to="." method="_on_line_edit_value_changed"]
[connection signal="value_changed" from="PanelContainer/HBoxContainer/LineEdit3" to="." method="_on_line_edit_value_changed"]
